objects/AcctSeedERP__Purchase_Price__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Price_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Unit_Price__c</fullName>
        <inlineHelpText>Denotes pre-established price for a product added on a Purchase Order line.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Product_Price_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Price</label>
    <listViews>
        <fullName>AcctSeedERP__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeedERP__Product__c</columns>
        <columns>AcctSeedERP__Unit_Price__c</columns>
        <columns>AcctSeedERP__Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeedERP__No_Vendor</fullName>
        <columns>NAME</columns>
        <columns>AcctSeedERP__Product__c</columns>
        <columns>AcctSeedERP__Unit_Price__c</columns>
        <columns>AcctSeedERP__Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeedERP__Vendor__c</field>
            <operation>equals</operation>
        </filters>
        <label>Non-Vendor Specific</label>
    </listViews>
    <listViews>
        <fullName>AcctSeedERP__Vendor</fullName>
        <columns>NAME</columns>
        <columns>AcctSeedERP__Product__c</columns>
        <columns>AcctSeedERP__Unit_Price__c</columns>
        <columns>AcctSeedERP__Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeedERP__Vendor__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Vendor Specific</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Purchase Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>